Fix Navigation bar collapse on all devices

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,6 @@
 // CUSTOM IMPORTS
 @import 'variables';
+@import 'mixins';
 @import 'fonts';
 
 // MIXINS
@@ -7,10 +8,17 @@
 // CUSTOM LAYOUT
 
 // CUSTOM STYLE
+#navbar--main {
+  .nav--icon {
+    color: #fff;
+  }
 
-.nav--icon {
-  color: #fff;
+  .button--text {
+    font: bold 1.4rem/1.5rem $Oswald;
+  }
 }
+
+@include slideNavBar(25vh, 20%);
 
 #hero {
   background: url('../img/hero-background.jpg') no-repeat;
@@ -43,6 +51,18 @@
 #how-it-works {
   .card {
     height: 50%;
+  }
+
+  h3 {
+    font: 2rem/2.2rem $Josefin;
+  }
+
+  h4 {
+    font: bold 1.5rem/1.7rem $Cabin;
+  }
+
+  p {
+    font: medium 1.1rem/1.2rem $Cabin;
   }
 }
 
